\name{NEWS}
\title{NEWS file for the metapost package}
\encoding{UTF-8}

\section{Changes in version 0.1-4}{
  \itemize{
    \item Minor tidying for CRAN submission
  }
}

\section{Changes in version 0.1-2}{
  \itemize{
    \item Fix bug in curl() (and tension()) with more than one value.
    \item Fix bug in adding curl() to path.
  }
}
