@@ -1,7 +1,7 @@
 Package: metapost
 Type: Package
 Title: Interface to 'MetaPost'
-Version: 1.0-6
+Version: 1.1-0
 Author: Paul Murrell
 Maintainer: Paul Murrell <paul@stat.auckland.ac.nz>
 Description: Provides an interface to 'MetaPost' (Hobby, 1998) 
