@@ -11,13 +11,18 @@
   (which can then be drawn by \code{\link{grid.metapost}}).
 }
 \usage{
-mptrace(logfile = "fig.log")
+mptrace(logfile = "fig.log", fig = 1)
 mpbbox(psfile)
 mpvp(psfile, ...)
 }
 \arguments{
   \item{logfile}{
     The name of a log file generated by \command{mpost}.
+  }
+  \item{fig}{
+    Which figure to read from the file. If numeric, then
+    read the \code{fig}th figure;  if character, then
+    read the figure labelled \code{fig}.
   }
   \item{psfile}{
     The name of a PostScript files generated by \command{mpost}.
