@@ -2,13 +2,19 @@
 \title{NEWS file for the metapost package}
 \encoding{UTF-8}
 
-\section{Changes in version 0.1-4}{
+\section{Changes in version 1.1-0}{
+  \itemize{
+    \item Add \code{fig} argument to \code{mptrace()}; must select
+    exactly one figure from log file.
+  }
+}
+\section{Changes in version 1.1-6}{
   \itemize{
     \item Minor tidying for CRAN submission
   }
 }
 
-\section{Changes in version 0.1-2}{
+\section{Changes in version 1.1-2}{
   \itemize{
     \item Fix bug in curl() (and tension()) with more than one value.
     \item Fix bug in adding curl() to path.
